# slopcards2anki

./: .gitignore  README.md  SKILL.md  main.py  pyproject.toml
.github/workflows/: ci.yml
mcp_server/: INSTRUCTIONS.MD  mcp_server.py
skill/: main.py
src/: decks.py  note_utils.py  notes.py  utils.py
src/utils/: check_anki.py
