[project]
name = "slopcards2anki"
version = "0.1.0"
description = "A tool to sync CSV notes to Anki via AnkiConnect"
dependencies = [
    "requests",
    "psutil",
    "fastmcp",
]

[tool.uv]
managed=true

[tool.ruff]
# Set maximum line length
line-length = 88

[tool.ruff.format]
# Enable formatting support 
quote-style = "double"

[tool.mypy]
mypy_path = "." 
ignore_missing_imports = true